--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,12 @@
 
 .my_div{
     border: 1px solid red;
-    margin: 0;
+    box-sizing: border-box;
+    flex:1 1 25%;
+    /* height: 25%; */
+    /* width: 25%; */
     
+
     
 }
 
@@ -26,6 +30,7 @@ height: 800px;
 border: 1px solid black;
 display: flex;
 flex-wrap: wrap;
+
 
 
 
